--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -30,7 +30,6 @@
     background-color: #2157F2;
 }
 .alice-carousel__prev-btn, .alice-carousel__next-btn {
-    /*display: none;*/
     width: 40px;
     height: 40px;
     border-radius: 50px;
@@ -39,6 +38,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media screen and (max-width: 577px) {
+        display: none;
+    }
 }
 
 .alice-carousel__prev-btn {
